# redesc

./: .copier-answers.yml  .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yml  install  pyproject.toml  requirements.txt  run  tags.json  update
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  mypy.yml  smokeshow.yml
redesc/: __init__.py  api.py  app.py  common.py  main.py  setup.py
scripts/: skeleton.sh
